--- a/src/GuiApp/FileTime.Avalonia/App.axaml
+++ b/src/GuiApp/FileTime.Avalonia/App.axaml
@@ -202,5 +202,25 @@
 		<Style Selector="Border.SelectedTimelineCommand">
 			<Setter Property="BorderBrush" Value="{DynamicResource ForegroundBrush}"/>
 		</Style>
+
+		<Style Selector="ListBox.RadioButtonListBox">
+			<Setter Property="BorderBrush" Value="Transparent"/>
+			<Setter Property="Background" Value="Transparent"/>
+		</Style>
+		<Style Selector="ListBox.RadioButtonListBox ListBoxItem">
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate>
+						<Border>
+							<RadioButton 
+								Content="{TemplateBinding ContentPresenter.Content}"
+								VerticalAlignment="Center"
+								IsChecked="{Binding Path=IsSelected,RelativeSource={RelativeSource TemplatedParent},Mode=TwoWay}"
+								Foreground="{DynamicResource ForegroundBrush}"/>
+						</Border>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
 	</Application.Styles>
 </Application>
