Sftp, fullname+nativepath refactor

--- a/src/GuiApp/FileTime.Avalonia/App.axaml
+++ b/src/GuiApp/FileTime.Avalonia/App.axaml
@@ -147,6 +147,7 @@
 			<converters:GetFileExtensionConverter x:Key="GetFileExtensionConverter"/>
 			<converters:CommandToCommandNameConverter x:Key="CommandToCommandNameConverter"/>
 			<converters:NamePartShrinkerConverter x:Key="NamePartShrinkerConverter"/>
+			<converters:StringReplaceConverter x:Key="PathPreformatter" OldValue="://" NewValue="/"/>
 
 		</ResourceDictionary>
 	</Application.Resources>
