--- a/src/GuiApp/FileTime.Avalonia/App.axaml
+++ b/src/GuiApp/FileTime.Avalonia/App.axaml
@@ -223,5 +223,18 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
+
+		<Style Selector="Image.LoadingAnimation">
+			<Style.Animations>
+				<Animation Duration="0:0:2" IterationCount="INFINITE" Easing="QuadraticEaseInOut">
+					<KeyFrame Cue="0%">
+						<Setter Property="RotateTransform.Angle" Value="45"/>
+					</KeyFrame>
+					<KeyFrame Cue="100%">
+						<Setter Property="RotateTransform.Angle" Value="405"/>
+					</KeyFrame>
+				</Animation>
+			</Style.Animations>
+		</Style>
 	</Application.Styles>
 </Application>
